Newly updated to add OGU
!

--- a/index.html
+++ b/index.html
@@ -51,21 +51,30 @@
                 <h1 style="font-family: derk; text-shadow: 0 0 0.40em #bababa;">wock.rip</h1>
                 <div class="socials">
 		<h4>Owner; uand#0001 / @uand on ig</h4>
+
                     <span>
                         $:
                 <a href="https://discord.com/invite/py" style="text-decoration:none; font-family: derk; font-size: 1em;">Discord Server</a>
                     </span>
+
                     <span>
                         $:
                 <a href="https://discord.com/users/1037677349237424128" style="text-decoration:none; font-family: derk; font-size: 1em;">Discord User</a>
                     </span>
+
                     <span>
                         $:
                 <a href="https://www.instagram.com/uand/" style="text-decoration:none; font-family: derk; font-size: 1em;">Instagram @Uand</a>
                     </span>
+
                     <span>
                         $:
                 <a href="https://www.edgysmm.com/" style="text-decoration:none; font-family: derk; font-size: 1em;">edgy: social media marketing (edgysmm.com)</a>
+                        </span>
+
+                    <span>
+                    $:
+                <a href="https://ogu.gg/umd" style="text-decoration:none; font-family: derk; font-size: 1em;">OGU</a>
                     </span>
             </div>
         </main>
