Updated embed GIF
!

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta property="og:title" content="wock.rip - lean lovin'">
         <meta property="og:url" content="https://wock.rip/">
         <meta name="twitter:card" content="summary_large_image">
-        <meta property="twitter:image" content="https://i.imgur.com/0bcCmOg.gif">
+        <meta property="twitter:image" content="https://i.imgur.com/a/RhVp0zQ.gif">
         <meta name="theme-color" content="#2f3136">
         <link rel="stylesheet" href="assets/css/main.css">
     </head>
