--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta property="og:type" content="website">
         <meta property="og:title" content="wock.rip - lean lovin'">
         <meta property="og:url" content="https://wock.rip/">
-        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:card" content="summary_small_image">
         <meta property="twitter:image" content="https://i.imgur.com/a/4OmxUkU.gif">
         <meta name="theme-color" content="#2f3136">
         <link rel="stylesheet" href="assets/css/main.css">
